--- a/src/Components/Button/style.scss
+++ b/src/Components/Button/style.scss
@@ -1,8 +1,8 @@
-@import "../../../Styles/Settings/Colors/buttons";
-@import "../../../Styles/Variables/padding";
-@import "../../../Styles/Variables/borders";
-@import "../../../Styles/Variables/fonts.module";
-@import "../../../Styles/Helpers/mixins";
+@import "../../Styles/Settings/Colors/buttons";
+@import "../../Styles/Variables/padding";
+@import "../../Styles/Variables/borders";
+@import "../../Styles/Variables/fonts.module";
+@import "../../Styles/Helpers/mixins";
 
 // primary button
 
