--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  /* padding: 2rem; */
   text-align: center;
+
+  height: 100%;
+}
+.App {
+  height: 100%;
 }
 
 .logo {
