--- a/src/Components/Typography/Link/style.scss
+++ b/src/Components/Typography/Link/style.scss
@@ -1,3 +1,3 @@
-@import "../../../../Styles/Settings/typography";
+@import "../../../Styles/Settings/typography";
 
 @include generateTypographyStyles(link, #5D6B82)
