--- a/src/Components/Typography/Title/style.scss
+++ b/src/Components/Typography/Title/style.scss
@@ -1,3 +1,3 @@
-@import "../../../../Styles/Settings/typography";
+@import "../../../Styles/Settings/typography";
 
 @include generateTypographyStyles(title, #05264E)
