--- a/src/Styles/Variables/_colors.scss
+++ b/src/Styles/Variables/_colors.scss
@@ -30,7 +30,7 @@ $quinary-color: #EBEBEB;
 $senary-color: white;
 
 
-$primary-colorized-color: #165DAD;
+$primary-colorized-color: #3b86ff;
 $secondary-colorized-color: #5BA4F7;
 $tertiary-colorized-color: #2d8bf1;
 
