--- a/src/Styles/Variables/_fonts.module.scss
+++ b/src/Styles/Variables/_fonts.module.scss
@@ -5,20 +5,20 @@ $bold-font-family: comfortaa-bold;
 
 @font-face {
   font-family: "comfortaa-regular";
-  src: url("../Fonts/Comfortaa-Regular.ttf");
+  src: url("../../assets/Fonts/Comfortaa-Regular.ttf");
 }
 
 @font-face {
   font-family: "comfortaa-medium";
-  src: url("../Fonts/Comfortaa-Medium.ttf");
+  src: url("../../assets/Fonts/Comfortaa-Medium.ttf");
 }
 
 @font-face {
   font-family: "comfortaa-bold";
-  src: url("../Fonts/Comfortaa-Bold.ttf");
+  src: url("../../assets/Fonts/Comfortaa-Bold.ttf");
 }
 
 @font-face {
   font-family: "comfortaa-semibold";
-  src: url("../Fonts/Comfortaa-SemiBold.ttf");
+  src: url("../../assets/Fonts/Comfortaa-SemiBold.ttf");
 }
