finished login page

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 
 @import "./Styles/Variables/_fonts.module.scss";
+@import "./Styles/main";
 #root {
   /* max-width: 1280px; */
   margin: 0 auto;
