--- a/src/Components/Button/style.scss
+++ b/src/Components/Button/style.scss
@@ -13,11 +13,10 @@
   height: fit-content;
   cursor: pointer;
   width: fit-content;
-  border: 1px solid $button-primary-border-color;
+  border: 1px solid $button-primary-background-color;
 
-  .ant-typography {
     color: $button-primary-text-color;
-  }
+  
 
   &:hover {
 
@@ -29,9 +28,9 @@
     height: fit-content;
     cursor: pointer;
 
-    .ant-typography {
+    
       color: $button-primary-text-color-hover;
-    }
+    
   }
 
   &:disabled {
@@ -43,17 +42,17 @@
     height: fit-content;
     cursor: unset;
 
-    .ant-typography {
+    
       color: $button-primary-text-color-disabled;
-    }
+    
 
     &:hover {
       background-color: $button-primary-background-color-disabled !important;
       border: 1px solid $button-primary-border-color-disabled;
 
-      .ant-typography {
+      
         color: $button-primary-text-color-disabled;
-      }
+      
     }
   }
 
@@ -76,19 +75,17 @@
   width: fit-content;
   border: 1px solid $button-secondary-border-color;
 
-  .ant-typography {
-    color: $button-secondary-text-color;
-  }
+    color: $button-secondary-text-color !important;
+  
 
   &:hover {
+    transform: translateY(-2px);
+    transition: 0.2s;
     background-color: $button-secondary-background-color-hover;
     border: 1px solid $button-secondary-border-color-hover;
     height: fit-content;
     cursor: pointer;
-
-    .ant-typography {
-      color: $button-secondary-text-color-hover;
-    }
+  
   }
 
   &:disabled {
@@ -100,17 +97,15 @@
     height: fit-content;
     cursor: unset;
 
-    .ant-typography {
       color: $button-secondary-text-color-disabled;
-    }
+    
 
     &:hover {
       background-color: $button-secondary-background-color-disabled !important;
       border: 1px solid $button-secondary-border-color-disabled;
 
-      .ant-typography {
         color: $button-secondary-text-color-disabled;
-      }
+      
     }
   }
 
@@ -131,33 +126,30 @@
   padding: 0;
   //box-shadow: $button-link-box-shadow-color;
 
-  .ant-typography {
     color: $button-link-text-color;
     //font-family: $font-family-regular;
-  }
+  
 
   &:hover {
     height: fit-content;
     cursor: pointer;
 
-    .ant-typography {
       color: $button-link-text-color-hover;
-    }
+    
   }
 
   &:disabled {
     height: fit-content;
     cursor: unset;
 
-    .ant-typography {
       color: $button-link-text-color-disabled;
-    }
+    
 
     &:hover {
 
-      .ant-typography {
+      
         color: $button-link-text-color-disabled;
-      }
+      
     }
   }
 
