--- a/src/Pages/Login/styles.scss
+++ b/src/Pages/Login/styles.scss
@@ -12,21 +12,22 @@
       margin-top: 5px !important;
     }
 
+
+
+
     .remember-container{
       display: flex;
       justify-content: space-between;
       align-items: center;
       margin-bottom: 12px;
+      *{
+      font-size: 12px;}
       .ant-checkbox{
-        height: 24px;
-        width: 24px;
         background-color: #ffffff;
         border: 1px solid #E0E6F7;
         border-radius: 7px;
         color: #4F5E64;
         .ant-checkbox-inner{
-          width: 22px;
-          height: 22px;
           border-radius: 5px;
       }
       .ant-checkbox-checked  .ant-checkbox-inner{
@@ -34,12 +35,13 @@
       }
 
       .ant-checkbox-wrapper{
-        align-items: center;
+        align-items: start;
+        padding-top: 6px;
       }
    
     }
     .ant-form{
-      margin-top: 30px ;
+      margin-top: 40px ;
       text-align: start;
 
       label{
@@ -50,34 +52,33 @@
     // box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);s
   
     .ant-form-item {
-     
+     margin-bottom: 28px !important;
       }
       margin-bottom: 20px;
-      .ant-input-affix-wrapper,#login_login{
+      .ant-input-affix-wrapper,.ant-input-affix-wrapper{
         height: 7vh;
         min-height: 4.8vh;
-        box-shadow: var(--content-shadow);
+        box-shadow: 0 0 1.12vh rgba(196, 200, 208, 0.6);
         border: none;
-        padding-left: 20px;
-        font-size: 14px;
+        border-radius: 8px;
+        padding-left: 10px;
+        font-size: 11px;
         width: 100%;
       }
 
     }
-  
-    .login-button {
-      width: 100% !important;
-      background: #05264E;
-      color: #ffffff;
+    .ant-form-item-explain-error {
+      font-size: 12px !important;
+      padding-top: 6px;
+  }
+    button {
       border-radius: 4px;
-      border: none !important;
-      height: 52px !important;
+      // border: none !important;
+      height: 38px !important;
       *{
-        font-size: 14px !important
+        font-size: 12px !important
       }
-      &:hover {
-        background-color: #f8c80d;
-    }
+      
     }
 
      .ant-image:has(.loginImage){
@@ -90,10 +91,12 @@
   }
   .form-col{
     background-color: #f9fcff;
+  
   }
   .form-content{
     margin: auto;
     margin-top: 20vh;
+    
     .ant-image:has(.login-logo){
       width: 60%;
       display: block;
@@ -109,7 +112,14 @@
   }
   .login-footer{
     text-align: center;
-
+    position: absolute;
+    bottom: 4vh;
+    width: 100%;
+    *{
+color: #212529;}
+.privacy{
+  text-decoration: underline;
+}
     
   }
   .login-link{
@@ -119,13 +129,12 @@
      }
   }
 
-
-  .login-image2{
-    margin-right: auto;
-    position: absolute;
-    bottom: -1%;
-    // margin-left: 8%;
-    display: block;
   }
+  .buttons-container{
+    display: flex;
+    gap: 32px;
+    button{
+      box-shadow: 0 0 1.12vh rgba(0, 0, 0, .2);
+      flex: 1;
+    }
   }
-  
