--- a/src/Styles/Variables/_colors.scss
+++ b/src/Styles/Variables/_colors.scss
@@ -35,7 +35,7 @@ $secondary-colorized-color: #5BA4F7;
 $tertiary-colorized-color: #2d8bf1;
 
 
-$primary-app-color: #FFFFFF;
+$primary-app-color: #f5f6fa;
 $secondary-app-color: #C7E0FC;
 $tertiary-app-color: #F6F6F7;
 $quaternary-app-color: #42526D;
