--- a/src/Layouts/SharedLayout/NavBar/styles.scss
+++ b/src/Layouts/SharedLayout/NavBar/styles.scss
@@ -3,71 +3,34 @@
 @import "../../../Styles/Variables/_fonts.module.scss";
 @import "../../../Styles/Variables/colors";
 
-%text-hovering-style {
-  content: "";
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: $light-blue-font-color;
-  transform-origin: center;
-  transition: transform 0.5s ease-out;
-}
+
 .layout-header-parent-container {
   background-color: $app-navbar-background-color;
-  position: sticky;
+
 }
 //header
 .ant-layout-header.header-container {
   background-color: transparent;
-  height: 108px;
+  height: 80px;
   padding-left: 0;
   padding-right: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
-}
-.register-button{
-  *{
-    font-size: 14px !important;
-    text-decoration: underline;
-  color: #05264E !important;}
-}
-.sign-in-button {
-  box-shadow: 0px 18px 40px rgba(25, 15, 9, 0.1);
-}
-.header-menu-item{
-  margin-inline: 22px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  &:hover{
-    color: #3c65f5 !important;
-    position: relative;
-    &::after {
-      content: "";
-      border-bottom: 2px solid #3c65f5;
-      position: absolute;
-      left: 0;
-      width: 100%;
-      bottom: 0;
+  padding-inline: 40px;
+
+  .header-buttons{
+    display: flex;
+    gap: 16px;
+    .header-button{
+      width: 42px;
+      height: 42px;
+      background-color: #FFF;
+      border-radius: 50%;
     }
   }
 }
-.navbar-selected-item {
-  color: #3c65f5 !important;
-  position: relative;
-  &::after {
-    content: "";
-    border-bottom: 2px solid #3c65f5;
-    position: absolute;
-    left: 0;
-    width: 100%;
-    bottom: 0;
-  }
-}
+
 
 .logo-button {
   width: fit-content;
@@ -76,11 +39,15 @@
   padding: 0 !important;
   border: none;
   box-shadow: none;
-}
+  .ant-image{
+    width: 130px;
+    height: 33px;
+    margin-left: 12px;
+    img{
+      height: 100%;
+    }
 
-.header-menu-item {
-  border: none !important;
-  cursor: pointer;
+  }
 }
 
 @include media-query(tablet) {
@@ -108,31 +75,7 @@
     width: 112px !important;
   }
 
-  .our-process-link {
-    padding-bottom: 120px !important;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .ant-layout-header.header-container {
-    //background-color: #fff;
-    width: 100%;
-    height: 64px;
-    padding-right: 0;
-    padding-left: 0;
-    text-align: left;
-    display: flex !important;
-    align-items: center;
-    justify-content: space-between;
-  }
 
-  .ant-layout-header.header-container {
-    //background-color: #fff;
-    width: 100%;
-    padding-right: 0;
-    padding-left: 0;
-    text-align: left;
-    display: inline-table;
-  }
 }
 
 
@@ -144,16 +87,4 @@
   
     
   }
-  .header-space{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    line-height:24px;
-  }
-.navbar-header{
-  display: flex;
-  align-items: center;
-  height: 64px;
-  width: 100%;
-  justify-content: space-between;
-}}
+}
