--- a/src/App.scss
+++ b/src/App.scss
@@ -50,3 +50,27 @@
 .read-the-docs {
   color: #888;
 }
+
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #becdde #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 14px;
+
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #becdde;
+  border-radius: 24px;
+  border: 4px solid #ffffff;
+}
