added services management

--- a/src/Layouts/SharedLayout/Sidebar/styles.scss
+++ b/src/Layouts/SharedLayout/Sidebar/styles.scss
@@ -53,5 +53,9 @@
     font-size: 12px;
   }
 }
-.ant-layout-sider-children {
+.logout-space{
+  position: absolute;
+  bottom: 12px;
+  left: 42px;
+  cursor: pointer;
 }
