--- a/src/Layouts/SharedLayout/style.scss
+++ b/src/Layouts/SharedLayout/style.scss
@@ -1,27 +1,26 @@
 @import "../../Styles/Variables/_fonts.module.scss";
 @import "../../Styles/Helpers/mixins";
 
-.ant-layout{
-  
-background-color: #f5f6fa !important;
+.ant-layout {
+  background-color: #f5f6fa !important;
 }
 
 .page-container {
   //min-width: 280px;
 
-background-color: #f5f6fa;
+  background-color: #f5f6fa;
   max-width: 1440px;
   margin: auto;
 
   margin-bottom: 80px !important;
-.ant-breadcrumb *{
-  font-size: 12px;
-  color: #343434;
-  .home-icon *{
-    color: #3b86ff !important;
-    margin-right: 6px;
+  .ant-breadcrumb * {
+    font-size: 12px;
+    color: #343434;
+    .home-icon * {
+      color: #3b86ff !important;
+      margin-right: 6px;
+    }
   }
-}
 }
 
 .layout-container {
@@ -29,30 +28,30 @@ background-color: #f5f6fa;
   display: flex;
   height: 100vh;
   // height: 100%;
-  .layout-content{
+  .layout-content {
     flex: auto;
     align-items: stretch;
   }
 
-.layout-header-parent-container{
-
-  width: 100%;
+  .layout-header-parent-container {
+    width: 100%;
+  }
 }
-
-
-
-}
-
 
 .layout-content {
   grid-area: content;
   min-height: 45.8vw;
-  padding-inline:40px ;
+  padding-inline: 40px;
   z-index: 0;
-  background-color: #f5f6fa ;
+  background-color: #f5f6fa;
+  @include media-query(tablet-and-mobile) {
+    padding-inline: 0px;
+    >.ant-layout > .ant-layout{
+      padding-inline: 0px !important;
+    }
+  }
 
   &.hide-content {
     display: none;
   }
 }
-
